# add_terminal

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  chart_glfw.slnx  vcpkg.json
TwsAdapter/: CMakeLists.txt  add.cpp  add.h  command.h  ibkr.h  ibkr_c_api.cpp  ibkr_c_api.h
add_terminal/: CMakeLists.txt  ibkr.cpp  renderer.cpp  renderer.h
c45k/: CMakeLists.txt  add.h  main.c
chart_glfw/: App.cpp  App.h  command.h  imgui.ini  main.c  main.cpp  renderer.cpp  renderer.h
chart_glfw/data_api/ikbr/: ibkr.cpp  ibkr.h
chart_glfw/src/: main.cpp  renderer.cpp  renderer.h
cpp45k/: App.cpp  CMakeLists.txt  renderer.cpp
patches/: apply_patches.ps1  tws_api_client_cmake.txt
